--- a/package.json
+++ b/package.json
@@ -12,19 +12,21 @@
   "license": "ISC",
   "dependencies": {
     "@discordjs/opus": "^0.1.0",
-    "discord.js": "^12.0.2",
+    "discord.js": "^12.2.0",
     "dotenv": "^8.2.0",
     "ffmpeg": "0.0.4",
     "ffmpeg-binaries": "^3.2.2",
     "ffmpeg-static": "^4.0.1",
     "google-auth-library": "^5.10.1",
     "googleapis": "^48.0.0",
+    "libsodium-wrappers": "^0.7.6",
     "opus": "0.0.0",
     "opusscript": "0.0.7",
     "regex": "^0.1.1",
+    "ytdl": "^1.3.0",
     "ytdl-core": "^2.0.0",
-    "ytdl-core-discord": "^1.1.0",
-    "ytsr": "^0.1.11"
+    "ytdl-core-discord": "^1.2.0",
+    "ytsr": "^0.1.14"
   },
   "devDependencies": {
     "eslint": "^6.8.0"
